TSK-1282: replaced Collections.singletonMap with Map.of in all tests